# stochastic-optimization

./: .gitignore  .pre-commit-config.yaml  NOTEBOOKS_SUMMARY.md  QUICK_START.md  README.md  REPOSITORY_MODERNIZATION.md  RESTRUCTURE_SUMMARY.md  mypy.ini  pyproject.toml  ruff.toml
AdaptiveMarketPlanning/: AdaptiveMarketPlanningDriverScript.py  ParametricModel.py
AssetSelling/: AssetSellingModel.py  AssetSellingModel_Q3.py  AssetSellingPolicy.py
BloodManagement/: BloodManagementModel.py  BloodManagementNetwork.py
ClinicalTrials/: ClinicalTrialsPolicy.py
EnergyStorage_I/: BackwardDP.py  EnergyStorageDriverScript.py
MedicalDecisionDiabetes/: MedicalDecisionDiabetesDriverScript.py
StochasticShortestPath_Dynamic/: Driver.py  Model.py  Policy.py
StochasticShortestPath_Static/: DriverScriptAdaptive.py  StaticModelAdaptiveSolution.py
TwoNewsvendor/: TwoNewsvendorDriverScript.py  TwoNewsvendorLearning.py
benchmarks/: PARITY.md  parity.py  run_notebooks.py
core/: simulator.py
examples/: train_asset_selling.py  train_clinical.py  train_energy_storage.py
legacy/: README.md
notebooks/: README.md  adaptive_market_planning.ipynb  asset_selling.ipynb  blood_management.ipynb  clinical_trials.ipynb  energy_storage.ipynb  medical_decision_diabetes.ipynb  ssp_dynamic.ipynb  ssp_static.ipynb  two_newsvendor.ipynb
tests/: test_adaptive_market_planning.py  test_asset_selling.py  test_blood_management.py  test_clinical.py  test_clinical_trials.py  test_energy_storage.py  test_medical_decision_diabetes.py  test_ssp_dynamic.py  test_ssp_static.py  test_two_newsvendor.py
(+70 files in other folders)
