[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stochastic-optimization"
version = "0.1.0"
description = "JAX-based sequential‑decision modelling library"
authors = [{name = "Pedro Nahum"}]
requires-python = ">=3.10"
dependencies = [
  "jax>=0.4.28",
  "jaxlib",                 # cpu wheel auto‑selected
  "flax>=0.10.7",
  "optax>=0.2.2",           # DeepMind optimiser toolbox :contentReference[oaicite:1]{index=1}
  "chex>=0.1.85",           # JAX test helpers & type‑checks
  "jaxtyping>=0.2.28",
  "ruff>=0.4.8",            # linter / formatter
  "pytest>=8.2",
]

[project.optional-dependencies]
cuda = ["jaxlib[cuda12_pip]"]         # users with GPUs can `pip install .[cuda]`
dev = [
  "black>=24.4.2",
  "isort>=5.12.0",
  "ruff>=0.4.8",
  "pre-commit>=2.20.0",
  "pytest>=8.2",
  "mypy>=1.5.0",
  "sphinx>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stochopt*"]
